[gd_scene format=3 uid="uid://bkvt6qgktr8nk"]

[ext_resource type="Script" uid="uid://bhk64cbejy7x1" path="res://Exposition Screen/exposition.gd" id="1_jwprq"]
[ext_resource type="Texture2D" uid="uid://dm8eoul3v7ykk" path="res://Exposition Screen/Assets/exposition_background.png" id="2_d6wlc"]
[ext_resource type="Texture2D" uid="uid://cvh378k0cd55y" path="res://Exposition Screen/Assets/exposition_box.png" id="3_l1ecj"]
[ext_resource type="FontFile" uid="uid://cn7unayeways7" path="res://Global/Fonts/veteran_typewriter/veteran typewriter.ttf" id="4_7kj5w"]
[ext_resource type="Texture2D" uid="uid://cngttom8u4lqj" path="res://Global/UI Assets/left_navigation.png" id="6_l1ecj"]
[ext_resource type="Texture2D" uid="uid://ccgm3tiudkuen" path="res://Global/UI Assets/left_navigation_selected.png" id="7_ydblc"]
[ext_resource type="Texture2D" uid="uid://5pi01q475dew" path="res://Global/UI Assets/right_navigation.png" id="8_50gd1"]
[ext_resource type="Texture2D" uid="uid://cpq0sm28lm1gx" path="res://Global/UI Assets/right_navigation_selected.png" id="9_727dr"]
[ext_resource type="Texture2D" uid="uid://b1oluiy36gbg1" path="res://Global/UI Assets/button.png" id="9_ydblc"]
[ext_resource type="Texture2D" uid="uid://dyo6n1i6wcars" path="res://Global/UI Assets/button_selected.png" id="10_l1ecj"]
[ext_resource type="FontFile" uid="uid://bh2r7hp5y63ay" path="res://Global/Fonts/victoria_typewriter/Victoria Typewriter  Bold.ttf" id="11_0a2aq"]

[node name="exposition_new" type="Node2D" unique_id=692204140]
script = ExtResource("1_jwprq")

[node name="ExpositionBackground" type="Sprite2D" parent="." unique_id=1892262337]
position = Vector2(961, 541)
texture = ExtResource("2_d6wlc")

[node name="ExpositionBox" type="Sprite2D" parent="." unique_id=870874618]
position = Vector2(961.00006, 532)
scale = Vector2(1.1353779, 1.0068808)
texture = ExtResource("3_l1ecj")

[node name="RichTextLabel" type="RichTextLabel" parent="ExpositionBox" unique_id=229450188]
anchors_preset = -1
anchor_left = -0.018783215
anchor_right = 0.01766258
offset_left = -548.2643
offset_top = -175.79044
offset_right = 545.35864
offset_bottom = 172.8175
theme_override_fonts/normal_font = ExtResource("4_7kj5w")
theme_override_font_sizes/normal_font_size = 55
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Back" type="TextureButton" parent="." unique_id=606830651]
offset_left = 41.0
offset_top = 864.0
offset_right = 254.0
offset_bottom = 1082.0
scale = Vector2(0.77031213, 0.8302743)
texture_normal = ExtResource("6_l1ecj")
texture_hover = ExtResource("7_ydblc")

[node name="Next" type="TextureButton" parent="." unique_id=1639031167]
offset_left = 1711.0
offset_top = 861.0
offset_right = 1919.0
offset_bottom = 1072.0
scale = Vector2(0.804659, 0.85685134)
texture_normal = ExtResource("8_50gd1")
texture_hover = ExtResource("9_727dr")

[node name="Start" type="TextureButton" parent="." unique_id=302187817]
offset_left = 707.00006
offset_top = 824.0
offset_right = 1386.0
offset_bottom = 1147.0
scale = Vector2(0.7267072, 0.81899095)
texture_normal = ExtResource("9_ydblc")
texture_hover = ExtResource("10_l1ecj")

[node name="Label" type="Label" parent="Start" unique_id=1417973448]
layout_mode = 0
offset_left = 226.11096
offset_top = 118.663086
offset_right = 438.11096
offset_bottom = 201.66309
theme_override_fonts/font = ExtResource("11_0a2aq")
theme_override_font_sizes/font_size = 60
text = "START"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Skip" type="TextureButton" parent="." unique_id=1964805128]
offset_left = 1499.0
offset_top = 7.0000005
offset_right = 2178.0
offset_bottom = 330.0
scale = Vector2(0.593551, 0.71352977)
texture_normal = ExtResource("9_ydblc")
texture_hover = ExtResource("10_l1ecj")

[node name="Label" type="Label" parent="Skip" unique_id=1489102265]
layout_mode = 0
offset_left = 237.57056
offset_top = 111.08037
offset_right = 438.57056
offset_bottom = 207.08037
theme_override_fonts/font = ExtResource("11_0a2aq")
theme_override_font_sizes/font_size = 70
text = "SKIP"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Skip" to="." method="_on_skip_pressed"]
